--- a/src/components/GameCard.css
+++ b/src/components/GameCard.css
@@ -1,5 +1,11 @@
 .game-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 1em 1em 0px 0em;
   border: 1px solid black;
-  padding: 4em;
+}
+
+img {
+  width: 10em;
 }
