--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,19 @@ body {
   margin: 0 auto;
   padding: 20px;
 }
+.nav-Bar{
+  display: flex;;
+  justify-content:center;
+}
+.mainLogo{
+  width: auto;
+  height: 200px;
+}
 
+.logo-container{
+  display: flex;
+  align-items: center;
+}
 .header,
 .footer {
   background: #1f1b24;
