--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,32 @@ body {
 .nav-Bar{
   display: flex;;
   justify-content:center;
+  font-size: 20px;
 }
 .mainLogo{
   width: auto;
-  height: 200px;
+  height: 250px;
+}
+
+.footer-txt{
+  margin-top: 10px;
+  margin-left: 10px;
+}
+.Social-Media{
+  display: flex;
+  align-items: center;
+}
+.instagram-txt{
+  margin:0;
+}
+
+.instagram {
+  height: 55px;
+  width: auto;
+}
+.X{
+  height: 55px;
+  width: auto;
 }
 
 .logo-container{
