--- a/src/App.css
+++ b/src/App.css
@@ -94,12 +94,15 @@ p {
 .modal-button {
   position: fixed;
   right: 0;
+  bottom: 20px;
   padding: 2em 3em;
   border-radius: 12px 0px 0px 12px;
+  opacity: 0.5;
 }
 
 .modal-button:hover {
   background-color: rgb(5, 153, 15);
+  opacity: 1;
 }
 
 .modal-overlay {
