--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #e0e0e0;
-  background-color: #121212;
+  background-image: url("./assets/Posible-Background.jpg");
   line-height: 1.6;
 }
 
@@ -49,7 +49,10 @@ body {
 }
 .header,
 .footer {
-  background: #1f1b24;
+  margin-top: 500px;
+  margin-left: 75px;
+  display: flex;
+  justify-content: center;
   color: #ffffff;
   padding: 20px 0;
   text-align: center;
@@ -115,7 +118,7 @@ p {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); 
-  backdrop-filter: blur(5px); /
+  backdrop-filter: blur(5px); 
 }
 
 .modal-content {
