--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -2,9 +2,9 @@
   display: flex;
   align-items: center;
   padding: 0.7em;
-
   width: 60%;
   align-self: center;
+  margin-bottom: 40px;
 }
 
 button {
