--- a/src/App.css
+++ b/src/App.css
@@ -147,3 +147,9 @@ p {
   color: red;
   font-size: 10px;
 }
+
+.strong-password-span {
+  font-weight: bold;
+  color: green;
+  font-size: 10px;
+}
