--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,12 @@ body {
 
 .nav-Bar {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  /* justify-content: center; */
   font-size: 20px;
 }
 .mainLogo {
-  width: auto;
-  height: 250px;
+  width: 12em;
 }
 
 .footer-txt {
@@ -38,16 +38,12 @@ body {
   height: 55px;
   width: auto;
 }
+
 .X {
   height: 55px;
   width: auto;
 }
 
-.logo-container {
-  display: flex;
-  align-items: center;
-}
-.header,
 .footer {
   margin-top: 500px;
   margin-left: 75px;
@@ -152,4 +148,17 @@ p {
   font-weight: bold;
   color: green;
   font-size: 10px;
+}
+
+.logo-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.loginPlace {
+  align-self: end;
+  margin-top: -10em;
+  padding-right: 1em;
 }
