--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -1,10 +1,10 @@
 .search-bar {
   display: flex;
   align-items: center;
-  padding: 0.7em;
   width: 60%;
   align-self: center;
   margin-bottom: 20px;
+  margin-top: 3em;
 }
 
 button {
